fix dp overstretching on large monitors issue

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -54,9 +54,11 @@
 
 #dp img {
     border-radius: 2rem;
-    max-width: 100%;
+    max-width: 400px;
     max-height: 500px;
+    width: 100%;
     height: auto;
+    object-fit: cover;
 }
 
 #socialsContainer {
